changed background color for the title to avoid contrast

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ blockquote footer{
 }
 
 .texture-paper::before {
-    background: url("../img/texture-paper.png");
+    background: url("/img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -655,7 +655,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #000!important;
+    color: #575757!important;
 }
 
 .container {
@@ -780,7 +780,6 @@ h4 {
 
 .tc-white {
     color: #F3976C!important;
-    background-color: #2E2E2E;
 }
 
 .btn-atomic-tangerine {
@@ -816,7 +815,7 @@ h4 {
 
 .bg-dots-bg {
     background-image: url("../img/dots-bg.png");
-    background-color: #737373;
+    background-color: rgba(0,0,0,.3);
 }
 
 .bg-lines-h2-bg {
